@@ -1,4 +1,5 @@
 =head1 Changes in DBD-Oracle 1.22(svn rev xxxx)  2008 
+  Added fetch by piece for lobs, fixed persistent lobs and changed to pod to reflect the changes 
   Added comment to POD on case sensitivity of ORACLE environment variables suggested by Gerhard Lausser
   Added patch to fix a number of harmless, but annoying, GCC warnings from Eric Simon
   Added (finally) ora_verbose for DBD only tracking from John Scoles and thanks to H.Merijn Brand
